--- a/src/assets/styles/components/PhotosContainer.scss
+++ b/src/assets/styles/components/PhotosContainer.scss
@@ -8,8 +8,15 @@
 
 @media screen and (max-width: 767px){
   .photos-container{
-    height: 100%;
+    height: 100vh;
     display: inline-flex;
     flex-direction: column;
+  }
+  .portrait{
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+    background-color: aliceblue;
+    box-sizing: border-box;
   }
 }
