--- a/src/assets/styles/components/Carousel.scss
+++ b/src/assets/styles/components/Carousel.scss
@@ -5,7 +5,8 @@
   margin: auto;
   display: block;
   position: absolute;
-  top: 0
+  top: 0;
+  z-index: 2
 /*   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
