--- a/src/assets/styles/components/Home.scss
+++ b/src/assets/styles/components/Home.scss
@@ -4,13 +4,13 @@ body{
   font-family: Arial, Helvetica, sans-serif;
   height: 100vh;
   width: 100%;
-  background-color: rgb(3, 4, 94);
+  background-color: #E6E6E6;
 /*   overflow: hidden; */
 }
 #app{
   height: 100vh;
   width: 100%;
-  background-color: rgb(3, 4, 94);
+  background-color: #E6E6E6;
 }
 .home{
   height: 100vh;
@@ -18,6 +18,10 @@ body{
   position: relative;
   overflow: scroll;
   overflow-x: hidden;
+}
+.home::-webkit-scrollbar{
+  height: 0;
+  width: 0;
 }
 
 
