--- a/src/assets/styles/components/InfoContainer.scss
+++ b/src/assets/styles/components/InfoContainer.scss
@@ -1,40 +1,160 @@
 .info-container{
   display: grid;
-  grid-template-rows: repeat(6,50vh);
+  grid-template-rows: repeat(6,100vh);
   height: 100%;
   width: 100%;
   position: absolute;
   top: 0;
   grid-gap: 100vh;
-/*   margin-top: 100vh; */
+  color: #E6E6E6;
 }
 .text-section{
-  display: block;
-  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   justify-content: center;
   margin: auto;
   text-align: center;
-  background: rgb(44, 106, 213);
+  background: #002766;
   width: 100%;
   overflow: hidden;
 }
+.text-section::-webkit-scrollbar{
+  height: 0;
+  width: 0;
+}
+.text-container{
+  height: 90%;
+  margin: auto;
+  width: 100%;
+  justify-content: center;
+  white-space: pre-line;
+  display: grid;
+  grid-template-columns: 100%;
+}
+.text-container:before {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  height: 100%;
+}
 .main-text{
-  font-size: 1em;
-  margin: 15px auto;
+  font-size: 2.2em;
+  margin: 10px auto;
+  font-family: 'Ephesis', cursive;
+  display: inline-block;
+  vertical-align: middle;
+  width: 80%;
 }
 .secondary-text{
-  font-size: .8em;
-  margin: 15px auto;
+  max-width: 90%;
+  font-size: 1.2em;
+  margin: 10px auto;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 200;
+  display: inline-block;
+  vertical-align: middle;
+  width: 80%;
 }
 
-
-.visible{
-  animation-name: example;
+.fadeUp{
+  animation-name: fadeUp;
   animation-duration: 2s;
 }
-
-@keyframes example {
+.fadeDown{
+  animation-name: fadeDown;
+  animation-duration: 2s;
+}
+@keyframes fadeUp {
   from {margin-top: 100px;}
-  to {margin-top: 15px;}
+  to {margin-top: 10px;}
+}
+@keyframes fadeDown {
+  from {margin-bottom: 100px;}
+  to {margin-bottom: 10px;}
+}
+.pre-text{
+  font-size: 1.5em;
+}
+.engaged-couple{
+/*   border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px; */
+  font-family: 'Ephesis', cursive;
+}
+.engaged-couple h1{
+  font-size: 2.2em;
+}
+.engaged-couple h2{
+  font-size: 2em;
+  font-weight: 200;
+  font-family: 'Ephesis', cursive;
+}
+.info-engaged-img-container{
+  width: auto;
+  height: 200px;
+  border-radius: 70px;
+  overflow: hidden;
+  margin: 10px auto;
+/*   display: flex; */
+  justify-content: center;
+  align-items: center;
+  display: inline-block;
+  vertical-align: middle;
+}
+.info-engaged-img{
+  height: 100%;
+  width: auto;
+}
+.engaged-rings{
+  height: 80px;
+  margin: 10px auto;
+  width: max-content;
+}
+.parents{
+  /* border-radius: 10px; */
+}
+.good-parents{
+  /* border-radius: 10px; */
+}
+.ladies{
+  /* border-radius: 10px; */
+}
+.grooms{
+  /* border-radius: 10px; */
+}
+.event{
+/*   border-top-left-radius: 10px;
+  border-top-right-radius: 10px; */
+}
+.deco-element-container{
+  display: flex;
+  margin: 10px auto;
+  width: 30%;
+}
+.deco-element-img{
+  width: 100%;
+  margin: auto;
+}
+.deco-date-container{
+  display: flex;
+  margin: 10px auto;
+  width: 45%;
+}
+.deco-date-img{
+  width: 100%;
+  margin: auto;
+}
+
+@media screen and (max-width: 767px){
+  .deco-element-container{
+    display: flex;
+    margin: 10px auto;
+    width: 80%;
+  }
+  .deco-date-container{
+    display: flex;
+    margin: 10px auto;
+    width: 85%;
+  }
 }
 
