--- a/src/assets/styles/components/PhotosContainer.scss
+++ b/src/assets/styles/components/PhotosContainer.scss
@@ -1,9 +1,16 @@
 .photos-container{
   width: 100%;
-  height: max-content;
+  height: 100vh;
   display: block;
   position: sticky;
   top: 0;
+}
+.portrait{
+  width: 100%;
+  height: 100%;
+  background-color: #E6E6E6;
+  box-sizing: border-box;
+  display: flex;
 }
 
 @media screen and (max-width: 767px){
@@ -16,7 +23,6 @@
     width: 100%;
     height: 100%;
     padding: 5px;
-    background-color: aliceblue;
     box-sizing: border-box;
   }
 }
