--- a/src/assets/styles/components/Photo.scss
+++ b/src/assets/styles/components/Photo.scss
@@ -8,7 +8,7 @@
   overflow: hidden;
   align-items: center;
   justify-content: center;
-  border-radius: 15px;
+/*   border-radius: 15px; */
 }
 .photo{
   max-width: 960px;
