--- a/src/assets/styles/components/Carousel.scss
+++ b/src/assets/styles/components/Carousel.scss
@@ -1,7 +1,6 @@
 .carousel{
-  overflow: hidden;
   width: 100%;
-/*   height: 100vh; */
+  height: 100vh;
   margin: auto;
   display: block;
   position: absolute;
