First complete version achived

--- a/src/assets/styles/components/Photo.scss
+++ b/src/assets/styles/components/Photo.scss
@@ -51,6 +51,7 @@
     width: 100%;
     display: inline-flex;
     height: fit-content;
+    margin: 0;
   }
   .photoOne-container{
     border-radius: 0;
