--- a/src/assets/styles/components/InfoContainer.scss
+++ b/src/assets/styles/components/InfoContainer.scss
@@ -1,6 +1,6 @@
 .info-container{
   display: grid;
-  grid-template-rows: repeat(7,100vh);
+  grid-template-rows: repeat(max(8),100vh);
   height: 100%;
   width: 100%;
   position: absolute;
