--- a/src/assets/styles/components/PhotosContainer.scss
+++ b/src/assets/styles/components/PhotosContainer.scss
@@ -12,6 +12,9 @@
   box-sizing: border-box;
   display: flex;
 }
+.photo-footer-container{
+  display: none;
+}
 
 @media screen and (max-width: 767px){
   .photos-container{
@@ -23,5 +26,10 @@
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+  }
+  .photo-footer-container{
+    height: auto;
+    width: 100%;
+    display: none;
   }
 }
