--- a/src/assets/styles/components/Hero.scss
+++ b/src/assets/styles/components/Hero.scss
@@ -1,8 +1,13 @@
 .hero{
-  width: 100%;
-  height: 100vh;
   display: flex;
-  position: relative;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
+  margin: auto;
+  text-align: center;
+  background: #002766;
+  width: 100%;
+  overflow: hidden;
 }
 .hero-text{
   font-family: Ephesis,cursive;
