--- a/src/assets/styles/components/Photo.scss
+++ b/src/assets/styles/components/Photo.scss
@@ -1,7 +1,7 @@
 .photo-container{
   width: auto;
   display: inline-flex;
-  max-height: 90%;
+  max-height: 100%;
   margin: auto;
   animation-name: grow;
   animation-duration: 2s;
@@ -19,21 +19,6 @@
   
 }
 
-@keyframes grow {
-  from {
-    transform: scale(1)
-  }
-  to {
-    transform: scale(1.1)
-  }
-}
-
-.photoOne{
-  filter: brightness(.8);
-  z-index: 0;
-  height: 100vh;
-  width: auto;
-}
 .photoOne-container{
   width: auto;
   display: inline-flex;
@@ -45,21 +30,52 @@
   justify-content: center;
   transform: scale(1.1)
 }
+.photoOne{
+  filter: brightness(.8);
+  z-index: 0;
+  height: auto;
+  width: 100%;
+}
+.photoTwo-container, .photoSix-container{
+  width: auto;
+  height: 100%;
+}
+.photoTwo, .photoSix{
+  width: auto;
+}
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 769px){
+  .photoOne-container{
+    border-radius: 0;
+    height: 100vh;
+    margin: 0;
+  }
+  .photoOne{
+    height: 100%;
+    width: auto;
+  }
+}
+
+@media screen and (max-width: 426px){
   .photo-container{
     width: 100%;
     display: inline-flex;
     height: fit-content;
     margin: 0;
   }
-  .photoOne-container{
-    border-radius: 0;
-  }
   .photo{
     max-width: 960px;
     width: 100%;
     height: auto;
     margin: auto;
+  }
+}
+
+@keyframes grow {
+  from {
+    transform: scale(1)
+  }
+  to {
+    transform: scale(1.1)
   }
 }
