--- a/src/assets/styles/components/Home.scss
+++ b/src/assets/styles/components/Home.scss
@@ -5,7 +5,6 @@ body{
   height: 100vh;
   width: 100%;
   background-color: #E6E6E6;
-/*   overflow: hidden; */
 }
 #app{
   height: 100vh;
@@ -16,8 +15,7 @@ body{
   height: 100vh;
   width: 100%;
   position: relative;
-  overflow: scroll;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .home::-webkit-scrollbar{
   height: 0;
