--- a/src/assets/styles/components/PersonalInvitation.scss
+++ b/src/assets/styles/components/PersonalInvitation.scss
@@ -1,31 +1,32 @@
 .personal-invitation{
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 90%;
   justify-content: center;
   margin: auto;
   background: #002766;
-  width: 100%;
+  width: 90%;
   overflow: hidden;
 }
 .ticket-main-text{
-  font-size: 2.1em;
+  font-size: 2.5em;
   margin: 10px auto;
   font-family: 'Ephesis', cursive;
   display: inline-block;
   vertical-align: middle;
-  width: 80%;
+  width: 100%;
   text-align: center;
 }
 .ticket-secondary-text{
-  max-width: 90%;
-  font-size: 1em;
+  font-size: 1.5em;
   margin: 10px auto;
   font-family: 'Montserrat', sans-serif;
   font-weight: 200;
   display: inline-block;
   vertical-align: middle;
-  width: 80%;
+  width: 100%;
+  padding: 0 150px 0 250px;
+  box-sizing: border-box;
 }
 .ticket{
   margin: auto;
@@ -38,4 +39,25 @@
   padding: 10px 0;
   box-sizing: border-box;
   overflow: hidden;
+}
+
+@media screen and (max-width: 769px){
+  .ticket-main-text{
+    font-size: 2.2em;
+  }
+  .ticket-secondary-text{
+    font-size: 1.2em;
+    padding: 0 140px 0 200px;
+  }
+}
+@media screen and (max-width: 600px){
+  .ticket-secondary-text{
+    padding: 0 40px 0 70px;
+
+  }
+}
+@media screen and (max-width: 321px){
+  .ticket-secondary-text{
+    padding: 0 20px 0 50px;
+  }
 }
