--- a/src/assets/styles/components/InfoContainer.scss
+++ b/src/assets/styles/components/InfoContainer.scss
@@ -166,6 +166,9 @@
 
 
 @media screen and (max-width: 769px){
+  .info-container::-webkit-scrollbar{
+    height: 0;
+  }
   .main-text{
     font-size: 2.2em;
   }
