--- a/src/assets/styles/components/ScrollButtons.scss
+++ b/src/assets/styles/components/ScrollButtons.scss
@@ -1,19 +1,17 @@
 .buttons-container{
-  height: auto;
+  height: 100vh;
   width: 100vw;
   position: fixed;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 100%;
-  bottom: 10px;
   z-index: 2;
+  bottom: 12px;
 }
 
 .button{
-  height: 40px;
+  height: 100vh;
   width: 40px;
-  border-radius: 20px;
-  margin: auto;
   display: flex;
   background-color: rgba(131, 131, 131, 0.5);
   border: none;
@@ -21,7 +19,25 @@
 
 .button-scroll-forward{
   grid-column: 4/4;
+  grid-row: 1/2;
+  margin: auto 0 auto auto;
 }
 .button-scroll-backward{
   grid-column: 1/2;
+  grid-row: 1/2;
+  margin: auto auto auto 0;
+}
+
+@media screen and (max-width: 769px){
+  .buttons-container{
+    height: auto;
+    bottom: 10px;
+  }
+  .button{
+    height: 40px;
+    width: 40px;
+    border-radius: 20px;
+    margin: auto;
+    display: flex;
+  }
 }
