--- a/src/assets/styles/components/PhotosContainer.scss
+++ b/src/assets/styles/components/PhotosContainer.scss
@@ -11,25 +11,23 @@
   background-color: #E6E6E6;
   box-sizing: border-box;
   display: flex;
+  align-items: center;
+  overflow: hidden;
+  justify-content: center;
 }
-.photo-footer-container{
-  display: none;
-}
+
 
 @media screen and (max-width: 767px){
   .photos-container{
     height: 100vh;
-    display: inline-flex;
+    display: grid;
+    grid-template-rows: 50% 50%;
+    grid-template-columns: 100%;
     flex-direction: column;
   }
   .portrait{
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-  }
-  .photo-footer-container{
-    height: auto;
-    width: 100%;
-    display: none;
   }
 }
