--- a/src/assets/styles/components/Hero.scss
+++ b/src/assets/styles/components/Hero.scss
@@ -28,6 +28,20 @@
 }
 .hero-text{
   margin: 0 0 15px 0;
+  font-weight: 200;
+}
+.hero-secondary-text{
+  font-family: 'Ephesis', cursive;
+  font-size: .6em;
+  font-weight: 100;
+  margin: 20px;
+  position: absolute;
+  bottom: 0;
+  width: 70%;
+  box-sizing: border-box;
+  left: 10px;
+  text-align: left;
+  line-height: .8em;
 }
 .hero-img{
   width: auto;
@@ -35,11 +49,19 @@
 }
 
 @media screen and (max-width: 767px){
+  .hero-text{
+    margin: 0 0 15px 0;
+    font-weight: 300;
+  }
   .hero{
     height: fit-content;
   }
   .hero-text-container{
     font-size: 2.5em;
+  }
+  .hero-secondary-text{
+    font-size: .6em;
+    width: 90%;
   }
 }
 
