--- a/src/assets/styles/components/InfoContainer.scss
+++ b/src/assets/styles/components/InfoContainer.scss
@@ -10,6 +10,26 @@
   color: #E6E6E6;
   overflow-y: hidden;
 }
+.info-cover{
+  height: 100vh;
+  width: 100vw;
+  background: #00276600;
+  bottom: 12px;
+  position: relative;
+  z-index: 2;
+  margin: 0;
+  left: 0;
+  display: flex;
+}
+.info-content{
+  width: 100%;
+  height: auto;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .info-container::-webkit-scrollbar{
   height: 12px;
   border-radius: 6px;
@@ -42,15 +62,20 @@
 }
 .text-container{
   margin: auto;
-  width: 100%;
+  min-width: 100%;
+  width: auto;
   justify-content: center;
   white-space: pre-line;
-  display: none;
+  display: flex;
   grid-template-columns: 100%;
   max-height: 100%;
   padding: 10px 0;
   box-sizing: border-box;
   overflow: hidden;
+  position: relative;
+}
+.text-container-event{
+  width: auto;
 }
 /* .text-container:before {
   content: "";
@@ -64,17 +89,19 @@
   font-family: 'Ephesis', cursive;
   display: inline-block;
   vertical-align: middle;
-  width: 80%;
+  min-width: 80%;
+  width: max-content;
 }
 .secondary-text{
-  max-width: 90%;
   font-size: 1.5em;
   margin: 10px auto;
   font-family: 'Montserrat', sans-serif;
   font-weight: 200;
   display: inline-block;
   vertical-align: middle;
-  width: 80%;
+  max-width: 80%;
+  width: max-content;
+  
 }
 
 .engaged-couple{
@@ -127,21 +154,32 @@
 .grooms{
   border-radius: 10px;
 } */
-.event{
+/* .event{
  width: 50%;
  box-sizing: border-box;
  height: 90%;
  position: relative;
-}
+} */
 .event h1, .event h2 {
   margin: 5px auto;
 }
 .event-info{
-  display: flex;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 100%;
   margin: 5px auto;
-  width: 80%;
+  max-width: 80%;
   align-items: center;
   justify-content: space-evenly;
+}
+.event-secondary-text{
+  font-size: 1em;
+  margin: 10px auto;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 200;
+  display: inline-block;
+  vertical-align: middle;
+  width: 100%;
 }
 .event-location-container{
   height: 200px;
@@ -150,7 +188,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 auto;
+  margin: 10px auto;
 }
 .map-deco{
   position: absolute;
@@ -166,13 +204,10 @@
   position: relative;
   z-index: 1;
 }
-.text-container-event{
-  width: 100%;
-}
 .deco-element-container{
   display: flex;
   margin: 10px auto;
-  width: 35%;
+  min-width: 35%;
 }
 .deco-element-img{
   width: 100%;
@@ -181,11 +216,13 @@
 .deco-date-container{
   display: flex;
   margin: 5px auto;
-  width: 60%;
+  width: auto;
+  min-height: 120px;
 }
 .deco-date-img{
-  width: 100%;
+  width: auto;
   margin: auto;
+  min-height: 120px;
 }
 
 @media screen and (max-width: 769px){
@@ -209,22 +246,18 @@
   .deco-element-container{
     display: flex;
     margin: 10px auto;
-    width: 45%;
+    min-width: 45%;
   }
   .deco-date-container{
     display: flex;
     margin: 5px auto;
-    width: 55%;
   }
   .text-container-event h1{
     font-size: 2.2em;
   }
-  .text-container-event h2{
-    font-size: 1.2em;
-  }
   .event{
     margin: auto;
-    width: 90%;
+    /* width: 90%; */
     justify-content: center;
     white-space: pre-line;
     grid-template-columns: 100%;
@@ -235,17 +268,30 @@
 }
 
 @media screen and (max-width: 426px){
+  .secondary-text{
+    max-width: 90%;
+  }
   .event-info{
     display: block;
     margin: 5px auto;
-    width: 80%;
+    width: 85%;
     align-items: center;
   }
-  .deco-element-container{
-    width: 70%;
+  .event-location-container{
+    height: 150px;
+    width: 150px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto;
   }
-  .deco-date-container{
-    width: 80%;
+  .event-location{
+    width: 100%;
+  }
+  .deco-element-container{
+    max-width: 70%;
+    width: max-content;
   }
   .google-map{
     width: 150px;
@@ -269,5 +315,15 @@
 @keyframes fadeDown {
   from {margin-bottom: 100px;}
   to {margin-bottom: 5px;}
+}
+
+.fadeOut{
+  width: 0vw;
+  animation-name: fadeOut;
+  animation-duration: 2s;
+}
+@keyframes fadeOut {
+  from {width: 100vw;}
+  to {width: 0px;}
 }
 
