--- a/src/assets/styles/components/PhotoFooter.scss
+++ b/src/assets/styles/components/PhotoFooter.scss
@@ -1,16 +1,59 @@
 .photo-footer{
-  height: auto;
-  width: 100vw;
+  background: #0027665e;
+  box-shadow: 0px 0px 12px 4px rgba(246, 246, 246, 0.342);
+  border-radius: 0 20px 20px 0;
+  bottom: 20px;
   display: flex;
+  height: 25vh;
+  overflow: hidden;
+  position: absolute;
+  width: 45vw;
+  color: #e6e6e6;
 }
 .photo-footer-container{
-  height: auto;
+  height: 90%;
   width: 90%;
   display: flex;
   flex-direction: column;
   margin: auto;
   animation-name: grow;
   animation-duration: 2s;
+  align-items: center;
+  justify-content: center;
+}
+
+@media screen and (max-width: 1100px){
+  .photo-footer{
+    width: 60vw;
+  }
+}
+@media screen and (max-width: 767px){
+  .photo-footer{
+    background: #e7e7e7;
+    display: flex;
+    height: 100%;
+    grid-row: 2/3;
+    width: 100vw;
+    position: relative;
+    bottom: 0;
+  }
+  .photo-footer-container{
+    background: white;
+    box-shadow: 0px 0px 12px 4px rgba(160, 160, 160, 0.555);
+    color: #000000;
+    height: 90%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    animation-name: grow;
+    animation-duration: 2s;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    padding: 10px;
+    box-sizing: border-box;
+  }
 }
 
 @keyframes grow {
