--- a/src/assets/styles/components/PersonalInvitation.scss
+++ b/src/assets/styles/components/PersonalInvitation.scss
@@ -1,32 +1,33 @@
 .personal-invitation{
   display: flex;
   flex-direction: column;
-  height: 90%;
+  height: 100%;
   justify-content: center;
   margin: auto;
   background: #002766;
-  width: 90%;
+  width: 100%;
   overflow: hidden;
   position: relative;
 }
 .ticket-main-text{
   font-size: 2.5em;
-  margin: 10px auto;
+  line-height: 1em;
+  margin: 5px auto;
   font-family: 'Ephesis', cursive;
   display: none;
   vertical-align: middle;
-  width: 100%;
-  text-align: center;
+  max-width: 70%;
+  justify-content: center;
 }
 .ticket-secondary-text{
   font-size: 1.5em;
-  margin: 10px auto;
+  margin: 5px auto;
   font-family: 'Montserrat', sans-serif;
   font-weight: 200;
   display: none;
   vertical-align: middle;
   width: 100%;
-  padding: 0 150px 0 250px;
+  padding: 10px 150px 0 250px;
   box-sizing: border-box;
 }
 .ticket{
@@ -79,7 +80,7 @@
   }
   .ticket-secondary-text{
     font-size: 1.2em;
-    padding: 0 140px 0 200px;
+    padding: 10px 140px 0 200px;
   }
   .ticket-stamp{
     position: absolute;
@@ -93,13 +94,13 @@
 }
 @media screen and (max-width: 600px){
   .ticket-secondary-text{
-    padding: 0 40px 0 70px;
+    padding: 10px 40px 0 70px;
 
   }
 }
 @media screen and (max-width: 321px){
   .ticket-secondary-text{
-    padding: 0 20px 0 50px;
+    padding: 10px 20px 0 50px;
   }
 }
 
@@ -145,6 +146,6 @@
   }
   to {
     opacity: 1;
-    margin-top: 10px;
+    margin-top: 5px;
   }
 }
