Almost finish only frames are missing

--- a/src/assets/styles/components/Frame.scss
+++ b/src/assets/styles/components/Frame.scss
@@ -21,7 +21,7 @@
 .frame-corner{
   width: auto;
   height: 100%;
-  padding: 10px;
+/*   padding: 10px; */
   box-sizing: border-box;
 }
 .corner-event-frame{
