--- a/src/assets/styles/components/InfoContainer.scss
+++ b/src/assets/styles/components/InfoContainer.scss
@@ -1,15 +1,13 @@
-
-
 .info-container{
   display: grid;
-  grid-template-columns: repeat(max(8),100vw);
+  grid-template-columns: repeat(11,100vw);
   grid-template-rows: 100%;
   height: 100%;
   width: 100%;
   position: absolute;
   top: 0;
   grid-gap: 100vw;
-  color: #E6E6E6;
+  color: #000000;
   overflow-y: hidden;
 }
 .info-cover{
@@ -24,7 +22,7 @@
   display: flex;
 }
 .info-content{
-  width: 100%;
+  width: 100vw;
   height: auto;
   margin: auto;
   display: flex;
@@ -54,7 +52,8 @@
   justify-content: center;
   margin: auto;
   text-align: center;
-  background: #002766;
+  background: #E6E6E6;
+  /* background: #002766; */
   width: 100%;
   overflow: hidden;
 }
@@ -92,7 +91,7 @@
   display: inline-block;
   vertical-align: middle;
   min-width: 80%;
-  width: max-content;
+  font-weight: 200;
 }
 .secondary-text{
   font-size: 1.5em;
@@ -103,13 +102,24 @@
   vertical-align: middle;
   max-width: 80%;
   width: max-content;
-  
+}
+.third-text{
+  font-size: 1em;
+  margin: 10px auto;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 200;
+  display: inline-block;
+  max-width: 80%;
+  width: max-content;
+  text-align: left;
 }
 
 .engaged-couple{
-/*   border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px; */
+  background: url('../../static/rings2.jpg');
   font-family: 'Ephesis', cursive;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .engaged-couple h1{
   font-size: 2.2em;
@@ -119,11 +129,28 @@
   font-weight: 200;
   font-family: 'Ephesis', cursive;
 }
+.engaged-phrase{
+  width: 80%;
+  margin: 0 auto;
+  line-height: 1em;
+}
+.info-engaged{
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 90%;
+  justify-content: center;
+  margin: auto;
+  width: 80vw;
+  background: #00000060;
+  border-radius: 20px;
+  color: #E6E6E6;
+}
 .info-engaged-img-container{
   width: 100%;
   height: 200px;
   overflow: hidden;
-  margin: 10px auto;
+  margin: 0px auto;
   justify-content: center;
   align-items: center;
   display: inline-block;
@@ -144,9 +171,32 @@
   margin: 10px auto;
   width: 120px;
 }
-/* .parents{
-  border-radius: 10px;
+.parents{
+  background: url('../../static/parents-background.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* background-position-x: -100px; */
 }
+.info-parents{
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 90%;
+  justify-content: center;
+  margin: auto;
+  width: 80vw;
+  background: #00000060;
+  border-radius: 20px;
+  color: #E6E6E6;
+}
+.knot-img-container{
+  height: 100px;
+}
+.knot-img{
+  height: 100%;
+}
+/* 
 .good-parents{
   border-radius: 10px;
 }
@@ -226,6 +276,23 @@
   margin: auto;
   min-height: 120px;
 }
+.health-protocol{
+  width: 100%;
+}
+.health-protocol-list{
+  width: 80%;
+  padding: 0;
+}
+.health-protocol-list li{
+  display: flex;
+  text-align: left;
+  padding: 0 10px 10px;
+  margin: 0;
+  width: 100%;
+}
+/* .health-content{
+  width: 100%;
+} */
 
 
 @media screen and (max-width: 769px){
@@ -272,7 +339,7 @@
 
 @media screen and (max-width: 426px){
   .secondary-text{
-    max-width: 90%;
+    width: 80%;
   }
   .event-info{
     display: block;
@@ -299,6 +366,10 @@
   .google-map{
     width: 150px;
     height: 150px;    
+  }
+  .health-protocol-list li{
+    max-width: 100%;
+    width: 95%;
   }
 }
 
