--- a/src/assets/styles/components/PersonalInvitation.scss
+++ b/src/assets/styles/components/PersonalInvitation.scss
@@ -18,6 +18,7 @@
   vertical-align: middle;
   max-width: 70%;
   justify-content: center;
+  color: #E6E6E6;
 }
 .ticket-secondary-text{
   font-size: 1.5em;
@@ -29,6 +30,7 @@
   width: 100%;
   padding: 10px 150px 0 250px;
   box-sizing: border-box;
+  color: #E6E6E6;
 }
 .ticket{
   margin: auto;
