--- a/src/assets/styles/components/Confirmation.scss
+++ b/src/assets/styles/components/Confirmation.scss
@@ -123,7 +123,8 @@ input[type=number]::-webkit-outer-spin-button {
   background-color: rgb(114, 114, 114);
 }
 .form-button:hover:enabled{
-  background-color: rgba(255, 206, 0, 1);
+  background-color: #002d75;
+  color: white;
 }
 .form-item:invalid:focus{
   border: solid 4px red
