--- a/src/assets/styles/components/Frame.scss
+++ b/src/assets/styles/components/Frame.scss
@@ -76,6 +76,17 @@
     height: auto;
   }
 }
+@media screen and (max-width: 426px){
+  .frame-container{
+    grid-template-columns: 1fr 1fr;
+  }
+  .top-right{
+    grid-column: 2/3;
+  }
+  .bottom-right{
+    grid-column: 2/3;
+  }
+}
 
 .frameApear{
   display: grid;
