--- a/src/assets/styles/components/InfoContainer.scss
+++ b/src/assets/styles/components/InfoContainer.scss
@@ -53,7 +53,6 @@
   margin: auto;
   text-align: center;
   background: #E6E6E6;
-  /* background: #002766; */
   width: 100%;
   overflow: hidden;
 }
@@ -78,12 +77,7 @@
 .text-container-event{
   width: auto;
 }
-/* .text-container:before {
-  content: "";
-  display: inline-block;
-  vertical-align: middle;
-  height: 100%;
-} */
+
 .main-text{
   font-size: 2.5em;
   margin: 10px auto;
@@ -92,6 +86,7 @@
   vertical-align: middle;
   min-width: 80%;
   font-weight: 200;
+  ;
 }
 .secondary-text{
   font-size: 1.5em;
@@ -105,11 +100,11 @@
 }
 .third-text{
   font-size: 1em;
-  margin: 10px auto;
+  margin: 5px auto;
   font-family: 'Montserrat', sans-serif;
   font-weight: 200;
   display: inline-block;
-  max-width: 80%;
+  max-width: 75%;
   width: max-content;
   text-align: left;
 }
@@ -176,7 +171,6 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  /* background-position-x: -100px; */
 }
 .info-parents{
   align-items: center;
@@ -190,28 +184,22 @@
   border-radius: 20px;
   color: #E6E6E6;
 }
+.knot{
+  position: relative;
+}
 .knot-img-container{
-  height: 100px;
+  height: 300px;
+  width: 100vw;
 }
 .knot-img{
   height: 100%;
+  width: 100%;
 }
-/* 
-.good-parents{
-  border-radius: 10px;
+.knot-text{
+  font-size: 2.5em;
+  width: 80%;
 }
-.ladies{
-  border-radius: 10px;
-}
-.grooms{
-  border-radius: 10px;
-} */
-/* .event{
- width: 50%;
- box-sizing: border-box;
- height: 90%;
- position: relative;
-} */
+
 .event h1, .event h2 {
   margin: 5px auto;
 }
@@ -290,10 +278,27 @@
   margin: 0;
   width: 100%;
 }
-/* .health-content{
-  width: 100%;
-} */
 
+.facebook-container{
+  display: flex;
+  margin: 5px auto;
+  height: 50px;
+  width: 65%;
+}
+.facebook-container a{
+  display: flex;
+  height: inherit;
+  margin: auto 10px;
+  text-decoration: none;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  color: #000000;
+}
+.facebook-container a:hover{
+  color: #002766;
+
+}
 
 @media screen and (max-width: 769px){
 
@@ -304,7 +309,7 @@
     font-size: 2.2em;
   }
   .secondary-text{
-    font-size: 1.2em;
+    font-size: 1.1em;
   }
   .frame-container{
     bottom: 0;
@@ -327,7 +332,6 @@
   }
   .event{
     margin: auto;
-    /* width: 90%; */
     justify-content: center;
     white-space: pre-line;
     grid-template-columns: 100%;
@@ -371,6 +375,9 @@
     max-width: 100%;
     width: 95%;
   }
+  .knot-img-container{
+    height: 100px;
+  }
 }
 
 .fadeUp{
@@ -395,6 +402,7 @@
   width: 0vw;
   animation-name: fadeOut;
   animation-duration: 2s;
+  
 }
 @keyframes fadeOut {
   from {width: 100vw;}
