--- a/src/assets/styles/components/Photo.scss
+++ b/src/assets/styles/components/Photo.scss
@@ -3,15 +3,13 @@
   display: inline-flex;
   max-height: 100%;
   margin: auto;
-  animation-name: grow;
-  animation-duration: 5s;
   overflow: hidden;
   align-items: center;
   justify-content: center;
-  transform: scale(1.1)
+  position: relative
 }
 .photo{
-  width: 100%;
+  width: auto;
   height: 100%;
   margin: 0 auto;
   box-shadow: 0px 0px 11px 3px rgba(0, 0, 0, .2);
@@ -22,12 +20,9 @@
   width: auto;
   display: inline-flex;
   margin: auto;
-  animation-name: growOne;
-  animation-duration: 1s;
   overflow: hidden;
   align-items: center;
   justify-content: center;
-  transform: scale(1.1)
 }
 .photoOne{
   filter: brightness(.7);
@@ -56,16 +51,18 @@
   justify-content: center;
   align-items: center;
 }
+
 .photoNine-container, .photoTen-container, .photoEleven-container, .photoTwelve-container, .photoFourteen-container, .photoThirteen-container, .photoFifteen-container{
-  display: block;
-  height: 100vh;
-  margin: 0 auto;
-  width: auto;
-  position: absolute;
-  bottom: 0;
-  justify-content: center;
   align-items: center;
+  bottom: 0;
+  display: flex;
   flex-direction: column;
+  height: 100vh;
+  justify-content: center;
+  margin: 0 auto;
+  position: absolute;
+  width: 100vw;
+  transform: scale(1.2);
 }
 .photoNine, .photoTen, .photoEleven, .photoTwelve, .photoThirteen, .photoFourteen, .photoFifteen{
   height: 100%;
@@ -86,6 +83,18 @@
 }
 
 @media screen and (max-width: 426px){
+  .photoNine-container, .photoTen-container, .photoEleven-container, .photoTwelve-container, .photoFourteen-container, .photoThirteen-container, .photoFifteen-container{
+    display: block;
+    height: 100vh;
+    margin: 0 auto;
+    width: auto;
+    position: absolute;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transform: scale(1);
+  }
   .photo-container{
     width: 100%;
     display: inline-flex;
@@ -98,33 +107,14 @@
     height: auto;
     margin: auto;
   }
-  .photoTwo-container, .photoSix-container, .photoSeven-container, .photoEight-container{
+  .photoTwo-container, .photoThree-container, .photoSix-container, .photoSeven-container, .photoEight-container{
     height: 100%;
   }
-  .photoTwo, .photoSix, .photoSeven, .photoEight{
+  .photoTwo, .photoThree, .photoSix, .photoSeven, .photoEight{
     height: 100%;
     width: auto;
   }
   .photoTen{
     margin: 0
-  }
-}
-
-@keyframes grow {
-  from {
-    transform: scale(1);
-    opacity: 0;
-  }
-  to {
-    transform: scale(1.1);
-    opacity: 1;
-  }
-}
-@keyframes growOne {
-  from {
-    transform: scale(1)
-  }
-  to {
-    transform: scale(1.1)
   }
 }
