--- a/src/assets/styles/components/PhotoFooter.scss
+++ b/src/assets/styles/components/PhotoFooter.scss
@@ -1,13 +1,11 @@
 .photo-footer{
-  background: #0027665e;
-  box-shadow: 0px 0px 12px 4px rgba(246, 246, 246, 0.342);
   border-radius: 0 20px 20px 0;
   bottom: 20px;
   display: flex;
   height: 25vh;
   overflow: hidden;
   position: absolute;
-  width: 45vw;
+  width: 100vw;
   color: #e6e6e6;
 }
 .photo-footer-container{
@@ -16,20 +14,29 @@
   display: flex;
   flex-direction: column;
   margin: auto;
-  animation-name: grow;
-  animation-duration: 2s;
   align-items: center;
   justify-content: center;
 }
-
-@media screen and (max-width: 1100px){
-  .photo-footer{
-    width: 60vw;
-  }
+.previous-footer{
+  height: 100vh;
+  width: 100vw;
 }
+.footer-main-text{
+  box-sizing: border-box;
+  font-family: Ephesis, cursive;
+  font-size: 2em;
+  padding: 10px;
+  width: 90%;
+  margin: 0 auto;
+  font-weight: 200;
+  line-height: 1.1;
+}
+.photo-footer-frame{
+  display: none;
+}
+
 @media screen and (max-width: 767px){
   .photo-footer{
-    background: #e7e7e7;
     display: flex;
     height: 100%;
     grid-row: 2/3;
@@ -38,29 +45,22 @@
     bottom: 0;
   }
   .photo-footer-container{
-    background: white;
-    box-shadow: 0px 0px 12px 4px rgba(160, 160, 160, 0.555);
     color: #000000;
     height: 90%;
     width: 90%;
     display: flex;
     flex-direction: column;
     margin: auto;
-    animation-name: grow;
-    animation-duration: 2s;
     align-items: center;
     justify-content: center;
     border-radius: 20px;
     padding: 10px;
     box-sizing: border-box;
+    position: relative;
   }
 }
-
-@keyframes grow {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
+@media screen and (max-width: 767px){
+  .photo-footer-frame{
+    display: grid;
   }
 }
