--- a/src/assets/styles/components/PhotosContainer.scss
+++ b/src/assets/styles/components/PhotosContainer.scss
@@ -1,9 +1,9 @@
 .photos-container{
-  width: 100%;
+  display: grid;
+  flex-direction: column;
+  grid-template-columns: 100%;
+  grid-template-rows: 100%;
   height: 100vh;
-  display: flex;
-  position: sticky;
-  top: 0;
 }
 .portrait{
   width: 100%;
@@ -30,7 +30,8 @@
   display: none;
 }
 .previous{
-  filter: invert(1)
+  filter: invert(1);
+  width: 60%;
 }
 
 
@@ -63,5 +64,20 @@
   }
   .previous{
     filter: invert(0)
+  }
+}
+.grow{
+  animation-name: grow;
+  animation-duration: 1s;
+}
+
+@keyframes grow {
+  from {
+    width: 0;
+    opacity: 0.8;
+  }
+  to {
+    width: 100%;
+    opacity: 1;
   }
 }
