--- a/src/assets/styles/components/PersonalInvitation.scss
+++ b/src/assets/styles/components/PersonalInvitation.scss
@@ -76,6 +76,8 @@
   display: flex;
   height: 50%;
   opacity: 0;
+  left: 25vw;
+  top: 25vh;
 }
 @media screen and (max-width: 769px){
   .ticket-main-text{
