--- a/src/assets/styles/components/InfoContainer.scss
+++ b/src/assets/styles/components/InfoContainer.scss
@@ -323,13 +323,13 @@
   .secondary-text{
     font-size: 1.1em;
   }
-  .frame-container{
+  /* .frame-container{
     bottom: 0;
   }
   .frame-corner{
     width: 100%;
     height: auto;
-  }
+  } */
   .deco-element-container{
     display: flex;
     margin: 10px auto;
