--- a/src/assets/styles/components/Photo.scss
+++ b/src/assets/styles/components/Photo.scss
@@ -34,9 +34,6 @@
   width: auto;
   height: 100%;
 }
-.photoSix-container{
-  width: 70%;
-}
 .photoTen-container{
   width: auto;
   height: 100%;
@@ -76,9 +73,29 @@
     height: 100vh;
     margin: 0;
   }
-  .photoOne, .photoSeven{
+  .photoOne{
     height: 100%;
     width: auto;
+  }
+  .photoSeven{
+    height: auto;
+    width: 100vw;
+  }
+  .photoThree-container, .photoSix-container{
+    align-items: flex-start;
+    display: flex;
+    height: 100%;
+  }
+  .photoThree, .photoSix{
+    height: auto;
+    display: flex;
+    position: relative;
+    bottom: 13vh;
+    width: 100%;
+    height:fit-content;
+  }
+  .photoSix{
+    bottom: 0;
   }
 }
 
@@ -111,7 +128,12 @@
     width: 100%;
     height: 100%;
   }
-  .photoTwelve, .photoFifteen, .photoThree{
+  .photoThree{
+    width: auto;
+    height: 100%;
+    bottom: 0;
+  }
+  .photoTwelve, .photoFifteen{
     width: 100%;
     height: auto;
   }
