--- a/src/assets/styles/components/Confirmation.scss
+++ b/src/assets/styles/components/Confirmation.scss
@@ -27,6 +27,21 @@
   box-sizing: border-box;
   padding: 0 20px;
 }
+.form-form-new-invited{
+  display: grid;
+  grid-template-columns: 20% 80%;
+  grid-template-rows: 50px 50px auto 50px;
+  grid-template-areas: 'checkbox text1'
+             'nombre nombre'
+             'advice advice'
+             'send send';
+  height: auto;
+  justify-content: center;
+  width: 70%;
+  margin: 0 auto;
+  box-sizing: border-box;
+  padding: 0;
+}
 .form-mainText{
   font-size: 1.1em;
   font-weight: 200;
@@ -84,6 +99,26 @@
   box-sizing: border-box;
   outline: none;
   grid-area: number;
+}
+.form-new-invited{
+  height: 35px;
+  width: 100%;
+  font-family: inherit;
+  font-size: 1em;
+  margin: 0 auto;
+  padding: 5px;
+  display: flex;
+  border: solid 4px transparent;
+  border-radius: 5px;
+  box-sizing: border-box;
+  outline: none;
+  grid-area: nombre;
+  background-color: rgba(133, 133, 133, 0.7);
+  color: white;
+  filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.685));
+}
+.form-new-invited:placeholder-shown{
+  color: white;
 }
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
@@ -152,5 +187,8 @@ input[type=number]::-webkit-outer-spin-button {
   .form-form{
     width: 100%;
     margin: 0;
+  }
+  .form-form-new-invited{
+    width: 90%;
   }
 }
