--- a/src/assets/styles/components/InfoContainer.scss
+++ b/src/assets/styles/components/InfoContainer.scss
@@ -111,6 +111,7 @@
 
 .engaged-couple{
   background: url('../../static/rings2.jpg');
+  background-color: #002d75;
   font-family: 'Ephesis', cursive;
   background-position: center;
   background-repeat: no-repeat;
@@ -168,6 +169,7 @@
 }
 .parents{
   background: url('../../static/parents-background.jpg');
+  background-color: #002d75;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
