vertical scroll set

--- a/src/assets/styles/components/Hero.scss
+++ b/src/assets/styles/components/Hero.scss
@@ -6,7 +6,7 @@
   margin: auto;
   text-align: center;
   background: #002766;
-  width: 100%;
+  width: 100vw;
   overflow: hidden;
   white-space: pre-line;
 }
