--- a/src/assets/styles/components/Carousel.scss
+++ b/src/assets/styles/components/Carousel.scss
@@ -1,6 +1,6 @@
 .carousel{
-  width: 100%;
-  height: 100vh;
+  width: 100vw;
+  height: 100%;
   margin: auto;
   display: block;
   position: absolute;
