--- a/src/assets/styles/components/InfoContainer.scss
+++ b/src/assets/styles/components/InfoContainer.scss
@@ -1,14 +1,14 @@
 .info-container{
   display: grid;
-  grid-template-columns: repeat(11,100vw);
-  grid-template-rows: 100%;
+  grid-template-rows: repeat(11,100vh);
+  grid-template-columns: 100%;
   height: 100%;
   width: 100%;
   position: absolute;
   top: 0;
-  grid-gap: 100vw;
+  grid-gap: 100vh;
   color: #000000;
-  overflow-y: hidden;
+  overflow-y: scroll;
 }
 .info-cover{
   height: 100vh;
@@ -31,7 +31,7 @@
   align-items: center;
 }
 .info-container::-webkit-scrollbar{
-  height: 12px;
+  width: 12px;
   border-radius: 6px;
 }
 .info-container::-webkit-scrollbar-track{
@@ -53,8 +53,9 @@
   margin: auto;
   text-align: center;
   background: #E6E6E6;
-  width: 100%;
+  width: 100vw;
   overflow: hidden;
+  position: relative;
 }
 .text-section::-webkit-scrollbar{
   height: 0;
@@ -225,7 +226,7 @@
 }
 .event-location-container{
   height: 200px;
-  width: 200px;
+  width: auto;
   position: relative;
   display: flex;
   justify-content: center;
@@ -239,10 +240,10 @@
 }
 .google-map{
   height: 200px;
-  width: 200px;
+  width: 90%;
   margin: 5px auto;
   border: 0;
-  border-radius: 100px;
+  border-radius: 30px;
   position: relative;
   z-index: 1;
 }
@@ -315,9 +316,9 @@
 }
 
 @media screen and (max-width: 769px){
-
   .info-container::-webkit-scrollbar{
-    height: 0;
+    width: 0;
+    border-radius: 6px;
   }
   .main-text{
     font-size: 2.2em;
@@ -391,6 +392,27 @@
   }
   .knot-img-container{
     height: 100px;
+  }
+}
+
+@media screen and (max-width: 322px){
+  .text-container-event h1{
+    font-size: 2em;
+  }
+  .secondary-text{
+    font-size: 1em;
+  }
+  .deco-date-container{
+    height: 20%;
+  }
+  .event-info{
+    height: 80%
+  }
+  .event-location-container{
+    height: 100px;
+  }
+  .google-map{
+    height: 100%;
   }
 }
 
