--- a/src/assets/styles/components/PersonalInvitation.scss
+++ b/src/assets/styles/components/PersonalInvitation.scss
@@ -1,7 +1,7 @@
 .personal-invitation{
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   justify-content: center;
   margin: auto;
   background: #002766;
@@ -44,6 +44,8 @@
   padding: 10px 0;
   box-sizing: border-box;
   overflow: hidden;
+  height: 100vh;
+  padding: 30px 0;
 }
 .ticket-deco{
   height: 100%;
