--- a/src/assets/styles/components/ScrollButtons.scss
+++ b/src/assets/styles/components/ScrollButtons.scss
@@ -2,7 +2,7 @@
   height: 5vh;
   width: 100vw;
   position: fixed;
-  display: flex;
+  display: none;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 100%;
   z-index: 2;
